# bft

./: .clang-format  .clang-tidy  .git.boost  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  TODO.txt  appveyor.yml  index.html
doc/: Jamfile  Jamfile.v2_any  acknowledgments.qbk  beliefs.qbk  boost_beliefs_define_class.qbk  boost_dst_define_class.qbk  dependencies.qbk  dst.qbk  faq.qbk  fod.qbk  introduction.qbk  notes.qbk  preface.qbk  rationale.qbk  references.qbk  repository.qbk  tests.qbk  what_s_new.qbk
example/: CMakeLists.txt  Jamfile.v2  simple_fusion.cpp
include/boost/: CMakeLists.txt
include/boost/belief/: Jamfile.v2  README  TODO.txt  belief.hpp  boost_dst_define_class.hpp  communality.hpp  conjunctive_decomposition.hpp  contextual_discounting.hpp  discounting.hpp  disjunctive_decomposition.hpp  dst.hpp  dst_function.hpp  extension.hpp  fod.hpp  fod_minus.hpp  fod_union.hpp  implicability.hpp  marginalization.hpp  mass.hpp  max.hpp  min.hpp  plausibility.hpp  rule_base.hpp  rule_conjunctive.hpp  rule_conjunctive_cautious.hpp  rule_dempster.hpp  rule_disjunctive.hpp  rule_disjunctive_bold.hpp  rule_dubois_prade.hpp  rule_jeffrey_dempster.hpp  rule_normalization.hpp  rule_normalization_inagaki.hpp  rule_pcr5.hpp  rule_yager.hpp  rules.hpp  to_belief.hpp  to_communality.hpp  to_implicability.hpp  to_mass.hpp  to_pignistic.hpp  (+2 more)
include/boost/belief/cl/: GridSize1D.h  OpenCL.hpp  lidar.cl  multiply.cl  util.hpp
include/boost/belief/private/: deref.hpp  emptytype.hpp  pow.hpp  to_void.hpp
include/boost/beliefs/: belief.hpp  boost_dst_define_class.hpp  commonality.hpp  communality.hpp  conjunctive_decomposition.hpp  contextual_discounting.hpp  discounting.hpp  disjunctive_decomposition.hpp  dst.hpp  dst_function.hpp  extension.hpp  fod.hpp  fod_minus.hpp  fod_union.hpp  implicability.hpp  marginalization.hpp  mass.hpp  max.hpp  min.hpp  plausibility.hpp  rule_base.hpp  rule_conjunctive.hpp  rule_conjunctive_cautious.hpp  rule_dempster.hpp  rule_disjunctive.hpp  rule_disjunctive_bold.hpp  rule_dubois_prade.hpp  rule_jeffrey_dempster.hpp  rule_normalization.hpp  rule_normalization_inagaki.hpp  rule_pcr5.hpp  rule_yager.hpp  rules.hpp  to_belief.hpp  to_commonality.hpp  to_communality.hpp  to_implicability.hpp  to_mass.hpp  to_pignistic.hpp  to_plausibility.hpp  (+1 more)
include/boost/beliefs/cl/: GridSize1D.h  OpenCL.hpp  cl.hpp  commonality.cl  communality.cl  log.hpp  set.h  util.hpp
include/boost/beliefs/private/: deref.hpp  emptytype.hpp  pow.hpp  to_void.hpp
include/boost/bft/: CMakeLists.txt  belief.hpp  bft.hpp  bft_function.hpp  bft_function_fwd.hpp  boost_bft_define_class.hpp  boost_dst_define_class.hpp  commonality.hpp  conjunctive_decomposition.hpp  contextual_discounting.hpp  discounting.hpp  disjunctive_decomposition.hpp  extension.hpp  fod.hpp  fod_minus.hpp  fod_union.hpp  implicability.hpp  io.hpp  marginalization.hpp  mass.hpp  max.hpp  min.hpp  plausibility.hpp  rule_base.hpp  rule_conjunctive.hpp  rule_conjunctive_cautious.hpp  rule_dempster.hpp  rule_disjunctive.hpp  rule_disjunctive_bold.hpp  rule_dubois_prade.hpp  rule_jeffrey_dempster.hpp  rule_normalization.hpp  rule_normalization_inagaki.hpp  rule_pcr5.hpp  rule_yager.hpp  rules.hpp  to_belief.hpp  to_commonality.hpp  to_implicability.hpp  to_mass.hpp  (+3 more)
include/boost/bft/cl/: GridSize1D.h  OpenCL.hpp  belief.cl  cl.hpp  commonality.cl  lidar.cl  log.hpp  multiply.cl  set.h  util.hpp
include/boost/bft/detail/: deref.hpp  emptytype.hpp  is_small.hpp  pow.hpp  to_void.hpp
include/boost/bft/private/: deref.hpp  to_void.hpp
meta/: libraries.json
test/: CMakeLists.txt  Jamfile.v2  TestDst.cpp  TestOpenCLDst.cpp  bft_function_test1.cpp  bft_test1.cpp  discounting_test1.cpp  dst_function_test1.cpp  dst_test1.cpp  fuse-fod-incompatible-fail.cpp  incompatible_fod_fail1.cpp  io_test1.cpp  mass_test1.cpp  opencl_bft_test1.cpp  opencl_dst_test1.cpp  output_test1.cpp  rule_jeffrey_dempster_test1.cpp  rules_name_test1.cpp  rules_test1.cpp  test_discounting.cpp  test_dst_function.cpp  test_mass.cpp  test_rule_jeffrey_dempster.cpp  test_rules.cpp
test_headers/: CMakeLists.txt  Jamfile.v2  main.cpp  test.cpp
